--- a/azureai-basic-python/src/api/templates/index.html
+++ b/azureai-basic-python/src/api/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-100">
 <head>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
