--- a/azureai-basic-python/src/api/templates/index.html
+++ b/azureai-basic-python/src/api/templates/index.html
@@ -56,7 +56,7 @@
             <form id="chat-form">
                 <div class="input-group">
                     <i class="bi bi-body-text input-group-text" aria-hidden="true"></i>
-                    <input id="message" name="message"  class="form-control form-control-sm" type="text" rows="1" placeholder="Type your message in here..." aria-label="Ask ChatGPT">>
+                    <input id="message" name="message"  class="form-control form-control-sm" type="text" rows="1" placeholder="Type your message in here..." aria-label="Ask ChatGPT">
                         <button type="submit" class="btn btn-outline-light">
                         Send
                         <i class="bi bi-send-fill" aria-hidden="true"></i>
